--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gsap": "^3.11.4",
     "gsap-trial": "^3.11.4",
     "joi": "^17.7.0",
+    "locomotive-scroll": "^4.1.4",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
